[tool.poetry]
name = "bmucsanyi-github-io"
version = "0.1.0"
description = ""
authors = ["Balint Mucsanyi <mucsanyibalint99@gmail.com>"]
readme = "README.md"
packages = [{include = "bmucsanyi"}]

[tool.poetry.dependencies]
python = "^3.11"
pybtex = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
